    - Nepali updated. Closes: #435331

  [ Lior Kaplan ]
  * Add iceweasel-l10n-ku to kurish-desktop task

  [ Joey Hess ]
  * Update menu file to use new section.
  * Add arj and p7zip to gnome-desktop. These are recommended by file-roller
    and useful for interoperability with windows users who commonly use these
    formats. Closes: #414408

  [ Christian Perrier ]
  * Remove deprecated pango-libthai from the thai-desktop task. 
    Closes: #433429

 -- Christian Perrier <bubulle@debian.org>  Tue, 17 Jul 2007 19:35:47 +0200

tasksel (2.68) unstable; urgency=low

  [ Joey Hess ]
  * Remove Randolph from uploaders as he isn't involved in tasksel anymore.

  [ Translations of tasks ]
    - Tamil updated. Closes: #420950
    - Spanish updated.
    - Simplified Chinese updated.
    - Danish updated.
    - Russian updated.

  [ Eddy Petri?or ]
  * removed kde-i18n-ro from the romanian-desktop task since it doesn't make
    any sense to install that on default gnome desktop systems

  [ Joey Hess ]
  * Unversion postgresql packages in database-server to use new metapackages
    that will pull in the right version.
  * Switch from gaim to pidgin.
  * Switch from grdesktop to tsclient. Closes: #410782
  * Add Kurdish tasks, package lists from Lior Kaplan. Closes: #394348

  [ Per Olofsson ]
  * Switch to php5 in web-server task. Closes: #400966
  * Add cpufrequtils to desktop task.
  * Add suspend and hibernate utilities to desktop task. New desktop
    machines can usually suspend, and almost always hibernate.

  [ Joey Hess ]
  * Powertop is de rigueur for laptops these days.

  [ Dann Frazier ]
  * Use dmidecode to check if the chassis is of type "rack".
    If it is, unmark the desktop task by default. Closes: #398981

 -- Joey Hess <joeyh@debian.org>  Mon, 25 Jun 2007 16:12:17 -0400

tasksel (2.67) unstable; urgency=low

  [ Translations of tasks ]
    - Thai updated.
    - Czech updated.
    - Esperanto updated. Closes: #409637
    - Japanese updated.